--- a/testapplication/android/app/src/main/AndroidManifest.xml
+++ b/testapplication/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
+
         android:label="testapplication"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
@@ -29,5 +30,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
