--- a/testapplication/pubspec.yaml
+++ b/testapplication/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   another_flushbar: ^1.12.30
   in_app_review:
   onesignal_flutter: ^5.0.0
-
+  getwidget: ^4.0.0
 
 dev_dependencies:
   flutter_test:
