--- a/testapplication/android/app/build.gradle
+++ b/testapplication/android/app/build.gradle
@@ -67,5 +67,7 @@ flutter {
 }
 
 dependencies {
-    implementation 'com.android.support:multidex:2.0.1' //enter the latest multidex version
+    implementation 'com.android.support:multidex:2.0.1'
+    implementation(platform("com.google.firebase:firebase-bom:32.2.3"))
+    implementation("com.google.firebase:firebase-analytics-ktx")
 }
