--- a/testapplication/pubspec.yaml
+++ b/testapplication/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   getwidget: ^4.0.0
   firebase_core: ^2.15.1
   firebase_remote_config: ^4.2.5
+  firebase_core_dart: ^1.0.1
 
 
 dev_dependencies:
