--- a/testapplication/android/app/build.gradle
+++ b/testapplication/android/app/build.gradle
@@ -67,7 +67,9 @@ flutter {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:multidex:2.0.1'
-    implementation(platform("com.google.firebase:firebase-bom:32.2.3"))
+    implementation(platform("com.google.firebase:firebase-bom:32.2.2"))
+    implementation 'com.google.firebase:firebase-analytics'
     implementation("com.google.firebase:firebase-analytics-ktx")
 }
